--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,12 +1,7 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
 project_name: wsp
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
-    - go generate ./...
 builds:
   - main: ./cmd/wspc
     id: "wspc"
@@ -15,7 +10,6 @@ builds:
       - linux
       - darwin
       - windows
-
   - main: ./cmd/wsps
     id: "wsps"
     binary: wsps
@@ -24,13 +18,7 @@ builds:
       - darwin
       - windows
 archives:
-  - replacements:
-      darwin: darwin
-      linux: linux
-      windows: windows
-      386: i386
-      amd64: x86_64
-    format_overrides:
+  - format_overrides:
       - goos: windows
         format: zip
     files:
@@ -49,8 +37,6 @@ changelog:
       - '^docs:'
       - '^test:'
 release:
-  # Repo in which the release will be created.
-  # Default is extracted from the origin remote URL or empty if its private hosted.
   github:
     owner: gowsp
     name: wsp
